# VulkanLaunchpadStarter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OTHER_LINUX_DISTROS.md  README.md  make.bat  makefile
assets/: settings.ini
assets/cube/: license.txt
assets/cubemap/: license.txt  negx.dds  negy.dds  negz.dds  posx.dds  posy.dds  posz.dds
assets/lepetitcoin/: license.txt  translation_info.txt
assets/moped/: license.txt  moped.dds
assets/sphere/: license.txt
assets/textures/: license.txt  tiles_diffuse.dds  tiles_specular.dds  wood_texture.dds  wood_texture_specular.dds
assets/textures/cubemap/: negx.dds  negy.dds  negz.dds  posx.dds  posy.dds  posz.dds
assets/vespa/: license.txt
cmake/: vkl.cmake
src/: INIReader.h  Main.cpp  Teapot.cpp  Teapot.h  VulkanHelpers.cpp  VulkanHelpers.h
test/: DockerfileDebianBullseye  DockerfileLinuxMint  DockerfileUbuntu20  DockerfileUbuntu22  install_ubuntu_dependencies.sh
